изменены названия изображений

--- a/article_2.html
+++ b/article_2.html
@@ -85,7 +85,7 @@
 							<p>Все любят плёночный эффект на фотографиях. Однако не многие знают и понимают как такой эффект достигается на самом деле без использования фильтров и цветокоррекции цифровой фотографии.</p>
 							<p>На деле это очень сложный технологический процесс, который не дает права на ошибку. Существует два варианта: выполнение процедур на дому или в специализированной лаборатории. Мы рассмотрим второй.</p>
 							<p>
-								<img src="images/blog_4.jpg" alt="" class="img-fluid">
+								<img src="images/negativ-plenochnoj-lenty.jpg" alt="" class="img-fluid">
 							</p>
 							<p>Почему же большинство профессионалов прибегают к услугам лаборатории и не выполняют работу по проявке и сканированию дома?</p>
 							<p>Во-первых, процесс проявки требует наличия определенного помещения, в который не поступает ни капли света, иначе есть шанс испортить светочувствительное покрытие плёнки.</p>
@@ -93,12 +93,12 @@
 							<p>В-третьих, процесс очень сложный и права на ошибку нет. Представьте что Вы сделали крутые кадры, уже получили деньги от заказчика и попросту портите все кадры из-за малейшей ошибки: недолили проявителя или случайно открыли дверь в помещении и засветили плёнку. Намного надёжнее отдать плёнку профессионалам, которые выполняют этот процесс уже на автоматике и дают какие-никакие гарантии на свою работу.</p>
 							<h2 class="mb-3 mt-5 font-weight-bold">Каким фотолабораториям можно доверять в Минске?</h2>
 							<p>
-								<img src="images/blog_5.jpg" alt="" class="img-fluid">
+								<img src="images/fotolaboratoriya-fotoskvot.jpg" alt="" class="img-fluid">
 							</p>
 							<p>Фотосквот - это одна из двух лабораторий в Минске, куда бы я без сомнений отдал свою плёнку на выполнение процедур проявки и сканирования. Это место стало отправной точкой в мой мир аналоговой фотографии. В Фотосквоте можно купить плёнку практически любого формата, отдать свои плёнки на процедуры, помимо этого тут можно приобрести себе камеру или отремонтировать свою, а также тут регулярно проводятся мастер-классы по проявке, фотографированию и так далее.</p>
 							<p>Тут я купил первую плёнку и был постоянным клиентом на протяжении нескольких лет, пока они не переехали в место, куда мне добираться было тяжело и пришлось искать лабораторию с более удобным расположением.</p>
 							<p>
-								<img src="images/blog_6.jpg" alt="" class="img-fluid">
+								<img src="images/fotolaboratoriya-silverdotlab.jpg" alt="" class="img-fluid">
 							</p>
 							<p>А вот и та самая новая фотолаборатория, про которую я недавно рассказывал. Это SilverDotLab и это место я посещаю ежемесячно уже около трёх лет.</p>
 							<p>Главным преимуществом этой лаборатории является её расположение. Она находится в самом центре Минска, возле вокзала. Доехать до неё можно как на метро, так и на большинстве автобусов.</p>
@@ -109,18 +109,18 @@
 							<h2 class="mb-3 mt-5 font-weight-bold">Что делать с кассетами?</h2>
 							<p>Кассеты это еще одно напоминание из нулевых, которое сегодня набирает обороты. Мы рассмотрим вариант когда у Вас есть камера и кассета типа Hi8, но на самом деле тип кассеты не имеет значения, все действия выполняются аналогичным способом.</p>
 							<p>
-								<img src="images/blog_7.jpg" alt="" class="img-fluid">
+								<img src="images/kassetnaya-hi8-videokamera-sony.jpg" alt="" class="img-fluid">
 							</p>
 							<p>Есть такие же два варианта: оцифровать кассету дома или отдать в лабораторию. Но в случае кассет мы рассмотрим домашнюю оцифровку, потому что необходимое оборудование для этого окупается за несколько раз.</p>
 							<p>Для оцифровки нам потребуется компьютер и карта видеозахвата с выходом на "тюльпан" или S-Video в зависимости от того, какой выход предусмотрен в Вашей камере.</p>
 							<p>
-								<img src="images/blog_9.jpg" alt="" class="img-fluid">
+								<img src="images/karta-videozahvata-dlya-kassetnoj-videokamery.jpg" alt="" class="img-fluid">
 							</p>
 							<p>Карта видеозахвата стоит недорого, примерно 5 долларов на AliExpress. Подключение происходит через USB-A, затем к карте захвата подключается комплектный кабель камеры и кабель подключается к камере.</p>
 							<p>Для записи видео необходим какой-либо софт. Я использую iuVCR, потому что он имеет обширный выбор настроек: формат записи видео, битрейт, таймер остановки записи и др.</p>
 							<p>Приложение является достаточно старым, но не устаревшим, так как он полностью покрывает потребности качества формата записи на кассеты.</p>
 							<p>
-								<img src="images/blog_8.jpg" alt="" class="img-fluid">
+								<img src="images/programma-dlya-ocifrovki-video-s-kassety.jpg" alt="" class="img-fluid">
 							</p>
 							<p>В этой статье мы разобрали способы оцифровки аналогового формата визуальной информации. Начинающему фотографу или оператору поначалу это покажется непонятным, однако ничего страшного за этим не стоит, необходимо лишь немного углубиться в эту тему и разобраться. Удачи!</p>
 						</div> <!-- .col-md-8 -->
@@ -135,17 +135,17 @@
 							<div class="ftco-footer-widget mb-4 ml-md-4">
 								<h2 class="ftco-heading-2">Последние фото</h2>
 								<ul class="list-unstyled photo">
-									<li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/reklama-audi-rs-etron.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/dve-mashiny-stoyat-na-zakate.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/karbonovyj-velosiped-na-doroge.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/seryj-avtomobil-edet-v-zakate.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/trekovyj-velosiped-luk.jpg);"></a>
 									</li>
 								</ul>
 							</div>
