--- a/article_3.html
+++ b/article_3.html
@@ -86,23 +86,23 @@
 							<p>После отбора кадров в программе Adobe Lightroom я выполняю цветокоррекцию, а после в Adobe Photoshop ретуширую изображения.</p>
 							<p>
 								<div class="compare-img col-lg-6">
-									<img src="images/blog_10.jpg" alt="" class="img-fluid">
-									<img src="images/blog_10.png" alt="" class="img-fluid">
+									<img src="images/perednyaya-chast-mashiny-do-retushi.jpg" alt="" class="img-fluid">
+									<img src="images/perednyaya-chast-mashiny-posle-retushi.png" alt="" class="img-fluid">
 								</div>
 							</p>
 							<p>На этом примере можно увидеть как была убрана трещина на бампере автомобиля и также скрыта ржавчина на крыле.</p>
 							<p>В данном случае я использовал инструмент "штамп", после чего завершил ретушь инструментом "пластырь". Это один из самых простых вариантов ретуширования, который не требует больших знаний фотошопа.</p>
 							<p>
 								<div class="compare-img col-lg-6">
-									<img src="images/blog_11.jpg" alt="" class="img-fluid">
-									<img src="images/blog_11.png" alt="" class="img-fluid">
+									<img src="images/zadnyaya-chast-mashiny-do-retushi.jpg" alt="" class="img-fluid">
+									<img src="images/zadnyaya-chast-mashiny-posle-retushi.png" alt="" class="img-fluid">
 								</div>
 							</p>
 							<p>На фото выше ретуширование потребовало больше усилий, так как присутствуют характерные отражения, которые необходимо было сохранить. По аналогии с первым случаем был использован инструмент "штамп", для грубого перекрытия ржавчины. Также можно было использовать инструмент "перемещение с учетом содержимого", но это зависит от Ваших предпочтений. В конечном итоге "полируем" фотографию при помощи "пластыря".</p>
 							<p>
 								<div class="compare-img col-lg-6">
-									<img src="images/blog_12.jpg" alt="" class="img-fluid">
-									<img src="images/blog_12.png" alt="" class="img-fluid">
+									<img src="images/pered-mashiny-po-diagonali-do-retushi.jpg" alt="" class="img-fluid">
+									<img src="images/pered-mashiny-po-diagonali-posle-retushi.png" alt="" class="img-fluid">
 								</div>
 							</p>
 							<p>По отработанной схеме при помощи "штампа" и "пластыря" скрываем трещину на бампере и ржавчину на крыле.</p>
@@ -120,17 +120,17 @@
 							<div class="ftco-footer-widget mb-4 ml-md-4">
 								<h2 class="ftco-heading-2">Последние фото</h2>
 								<ul class="list-unstyled photo">
-									<li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/reklama-audi-rs-etron.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/dve-mashiny-stoyat-na-zakate.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/karbonovyj-velosiped-na-doroge.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/seryj-avtomobil-edet-v-zakate.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/trekovyj-velosiped-luk.jpg);"></a>
 									</li>
 								</ul>
 							</div>
