--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
 								<div class="col-md-12">
 									<div class="blog-entry ftco-animate d-md-flex">
 										<a href="article_1.html" class="img img-2"
-											style="background-image: url(images/blog_1.jpg);"></a>
+											style="background-image: url(images/mashina-na-zakate.jpg);"></a>
 										<div class="text text-2 p-4">
 											<h3 class="mb-2"><a href="article_1.html">Примеры плёночных фотографий</a></h3>
 											<div class="meta-wrap">
@@ -107,7 +107,7 @@
 								<div class="col-md-12">
 									<div class="blog-entry ftco-animate d-md-flex">
 										<a href="article_2.html" class="img img-2"
-											style="background-image: url(images/blog_stock_2.jpg);"></a>
+											style="background-image: url(images/plenochnyj-fotoapparat-kiev.jpg);"></a>
 										<div class="text text-2 p-4">
 											<h3 class="mb-2"><a href="article_2.html">Из аналога в цифру</a></h3>
 											<div class="meta-wrap">
@@ -125,7 +125,7 @@
 								<div class="col-md-12">
 									<div class="blog-entry ftco-animate d-md-flex">
 										<a href="article_3.html" class="img img-2"
-											style="background-image: url(images/blog_stock_3.jpg);"></a>
+											style="background-image: url(images/opel-vektra-c-szadi.jpg);"></a>
 										<div class="text text-2 p-4">
 											<h3 class="mb-2"><a href="article_3.html">Ретуширование изображений</a></h3>
 											<div class="meta-wrap">
@@ -155,19 +155,19 @@
 								<ul class="list-unstyled photo">
 									<div class="container">
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/image_1.jpg"></div>
+											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_2.jpg"></div>
+											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_3.jpg"></div>
+											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg"></div>
 											</li>
 										</div>
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/image_4.jpg"></div>
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_5.jpg"></div>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_6.jpg"></div>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg"></div>
 											</li>
 										</div>
 										
