--- a/collection.html
+++ b/collection.html
@@ -88,9 +88,9 @@
 				<div class="photograhy">
 					<div class="row">
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_1.jpg"
+							<a href="images/reklama-audi-rs-etron.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_1.jpg);">
+								style="background-image: url(images/reklama-audi-rs-etron.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Audi RS e-tron GT</h3>
@@ -99,9 +99,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_2.jpg"
+							<a href="images/dve-mashiny-stoyat-na-zakate.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_2.jpg);">
+								style="background-image: url(images/dve-mashiny-stoyat-na-zakate.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Opel Vectra</h3>
@@ -110,9 +110,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_3.jpg"
+							<a href="images/karbonovyj-velosiped-na-doroge.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_3.jpg);">
+								style="background-image: url(images/karbonovyj-velosiped-na-doroge.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Oduwan Carbo</h3>
@@ -121,9 +121,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_4.jpg"
+							<a href="images/seryj-avtomobil-edet-v-zakate.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_4.jpg);">
+								style="background-image: url(images/seryj-avtomobil-edet-v-zakate.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Opel Vectra</h3>
@@ -132,9 +132,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_5.jpg"
+							<a href="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_5.jpg);">
+								style="background-image: url(images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Seat Toledo VR6</h3>
@@ -143,9 +143,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_6.jpg"
+							<a href="images/trekovyj-velosiped-luk.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_6.jpg);">
+								style="background-image: url(images/trekovyj-velosiped-luk.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Look 464</h3>
@@ -154,9 +154,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_7.jpg"
+							<a href="images/sinyaya-sportivnaya-mashina-stoit-pod-kolonnami.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_7.jpg);">
+								style="background-image: url(images/sinyaya-sportivnaya-mashina-stoit-pod-kolonnami.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Opel Vectra OPC</h3>
@@ -165,9 +165,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_8.jpg"
+							<a href="images/staraya-volga-stoit-na-obochine.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_8.jpg);">
+								style="background-image: url(images/staraya-volga-stoit-na-obochine.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>ГАЗ-21</h3>
@@ -176,9 +176,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_9.jpg"
+							<a href="images/nissan-silviya-dlya-drifta.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_9.jpg);">
+								style="background-image: url(images/nissan-silviya-dlya-drifta.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Japlane</h3>
@@ -187,9 +187,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_10.jpg"
+							<a href="images/trekovyj-velosiped-fort.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_10.jpg);">
+								style="background-image: url(images/trekovyj-velosiped-fort.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Fort Track</h3>
@@ -198,9 +198,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_11.jpg"
+							<a href="images/golub.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_11.jpg);">
+								style="background-image: url(images/golub.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Парк Янки Купалы</h3>
@@ -209,9 +209,9 @@
 							</a>
 						</div>
 						<div class="col-md-4 ftco-animate">
-							<a href="images/image_12.jpg"
+							<a href="images/sovetskij-motocikl-s-kolyaskoj-v-tumane.jpg"
 								class="photography-entry img image-popup d-flex justify-content-start align-items-end"
-								style="background-image: url(images/image_12.jpg);">
+								style="background-image: url(images/sovetskij-motocikl-s-kolyaskoj-v-tumane.jpg);">
 								<div class="overlay"></div>
 								<div class="text ml-4 mb-4">
 									<h3>Мотоцикл К-750</h3>
@@ -231,19 +231,19 @@
 								<ul class="list-unstyled photo">
 									<div class="container">
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/image_1.jpg"></div>
+											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_2.jpg"></div>
+											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_3.jpg"></div>
+											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg"></div>
 											</li>
 										</div>
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/image_4.jpg"></div>
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_5.jpg"></div>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_6.jpg"></div>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg"></div>
 											</li>
 										</div>
 										
