--- a/article_1.html
+++ b/article_1.html
@@ -85,7 +85,7 @@
 							<p>Вы когда-нибудь задумывались, какой носитель наиболее точно хранит данные о Вашей фотографии? Спешу удивить, что это самая обычная, казалось бы уже устаревшая плёнка 35 мм, которая не имеет места на существование в современном мире, однако ее вытеснили цифровые носители информации только лишь из-за простоты процесса получения кадров и удобства использования.</p>
 							<p>Давайте рассмотрим и разберем несколько моих пленочных снимков автомобилей.</p>
 							<p>
-								<img src="images/blog_1.jpg" alt="" class="img-fluid">
+								<img src="images/mashina-na-zakate.jpg" alt="" class="img-fluid">
 							</p>
 							<p>Эта фотография раскрывает в полной мере все, за что сейчас любят плёнку, а именно теплые цвета, блик, пересвет. Казалось бы видно дефекты, но они же и придают шарма, придают фотографии жизни и естественности.</p>
 							<p>Это фото было сделано абсолютно спонтанно во время съемки автомобиля на цифровую камеру, локация непримечательна, но погода и освещение на улице круто сделали свою работу.</p>
@@ -94,14 +94,14 @@
 							<h2 class="mb-3 mt-5 font-weight-bold">BMW 3 и Portra</h2>
 							<p>Эта фотография сделана в неблагоприятных условиях: легкий туман, мало света. Как и в прошлом случае, это сыграло только на руку.</p>
 							<p>
-								<img src="images/blog_2.jpg" alt="" class="img-fluid">
+								<img src="images/chernaya-mashina-bmv-v-tumane.jpg" alt="" class="img-fluid">
 							</p>
 							<p>Темный автомобиль и мрачная погода - идеальное сочетание для хорошего кадра. Всё могло бы быть хорошо, если не один просчёт, который допускают начинающие фотографы, или я, который просто поспешил и никак не поменял настройки фотоаппарата перед спуском затвора. Внимательные читатели уже заметили, что часть машины резкая, а часть вовсе нет. Всё это произошло только лишь потому что я открыл диафрагму на максимум ее диапазона,  чтобы получить больше света либо забыл поменять её после прошлого кадра. Но факт остаётся фактом, для этого я и пишу об этом, для разборов своих ошибок и достижений, и, чтобы показать Вам как делать надо, а как лучше не стоит.</p>
 							<p>Плёнка в данном случае использовалась Kodak Portra 160, которая не подходит под такие условия от слова совсем, потому что как минимум она рассчитана на хорошее количество естественного солнечного света. Этот нюанс сделал кадр холодным и синевато-зеленым, что конечно можно поправить цветокоррекцией, но это не наш вариант. Фотографировать надо не с надеждой на дальнейшую обработку, а с надеждой на минимальные коррекции кадра.</p>
 							<h2 class="mb-3 mt-5 font-weight-bold">Look и Fomapan</h2>
 							<p>Если у фотографа спросить совет какую плёнку стоит первым делом попробовать для фотографии, он скажет: "чёрно-белую". А если уточнить какую чёрно-белую, последует ответ: "Fomapan".</p>
 							<p>
-								<img src="images/blog_3.jpg" alt="" class="img-fluid">
+								<img src="images/muzhchina-s-trekovym-velosipedom.jpg" alt="" class="img-fluid">
 							</p>
 							<p>Черно-белая с одной стороны может простить некоторые огрехи фотографа, такие как цветные блики, простота цветокоррекции. Однако несмотря на это имеет меньшую популярность чем цветная негативная. Благодаря меньшей популярности среди фотографов стоимость этой плёнки как правило на порядок ниже, чем стоимость цветной плёнки.</p>
 							<p>Разберем полученный кадр.</p>
@@ -128,17 +128,17 @@
 							<div class="ftco-footer-widget mb-4 ml-md-4">
 								<h2 class="ftco-heading-2">Последние фото</h2>
 								<ul class="list-unstyled photo">
-									<li><a href="#" class="img" style="background-image: url(images/image_1.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/reklama-audi-rs-etron.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_2.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/dve-mashiny-stoyat-na-zakate.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_3.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/karbonovyj-velosiped-na-doroge.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_4.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/seryj-avtomobil-edet-v-zakate.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_5.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg);"></a>
 									</li>
-									<li><a href="#" class="img" style="background-image: url(images/image_6.jpg);"></a>
+									<li><a href="#" class="img" style="background-image: url(images/trekovyj-velosiped-luk.jpg);"></a>
 									</li>
 								</ul>
 							</div>
