--- a/contact.html
+++ b/contact.html
@@ -136,19 +136,19 @@
 								<ul class="list-unstyled photo">
 									<div class="container">
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/image_1.jpg"></div>
+											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_2.jpg"></div>
+											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_3.jpg"></div>
+											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg"></div>
 											</li>
 										</div>
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/image_4.jpg"></div>
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_5.jpg"></div>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/image_6.jpg"></div>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg"></div>
 											</li>
 										</div>
 										
