--- a/article_1.html
+++ b/article_1.html
@@ -85,7 +85,7 @@
 							<p>Вы когда-нибудь задумывались, какой носитель наиболее точно хранит данные о Вашей фотографии? Спешу удивить, что это самая обычная, казалось бы уже устаревшая плёнка 35 мм, которая не имеет места на существование в современном мире, однако ее вытеснили цифровые носители информации только лишь из-за простоты процесса получения кадров и удобства использования.</p>
 							<p>Давайте рассмотрим и разберем несколько моих пленочных снимков автомобилей.</p>
 							<p>
-								<img src="images/mashina-na-zakate.jpg" alt="" class="img-fluid">
+								<img src="images/mashina-na-zakate.jpg" alt="Фото автомобиля Opel Vectra на закате" class="img-fluid">
 							</p>
 							<p>Эта фотография раскрывает в полной мере все, за что сейчас любят плёнку, а именно теплые цвета, блик, пересвет. Казалось бы видно дефекты, но они же и придают шарма, придают фотографии жизни и естественности.</p>
 							<p>Это фото было сделано абсолютно спонтанно во время съемки автомобиля на цифровую камеру, локация непримечательна, но погода и освещение на улице круто сделали свою работу.</p>
@@ -94,14 +94,14 @@
 							<h2 class="mb-3 mt-5 font-weight-bold">BMW 3 и Portra</h2>
 							<p>Эта фотография сделана в неблагоприятных условиях: легкий туман, мало света. Как и в прошлом случае, это сыграло только на руку.</p>
 							<p>
-								<img src="images/chernaya-mashina-bmv-v-tumane.jpg" alt="" class="img-fluid">
+								<img src="images/chernaya-mashina-bmv-v-tumane.jpg" alt="Фотосессия автомобиля BMW в тумане" class="img-fluid">
 							</p>
 							<p>Темный автомобиль и мрачная погода - идеальное сочетание для хорошего кадра. Всё могло бы быть хорошо, если не один просчёт, который допускают начинающие фотографы, или я, который просто поспешил и никак не поменял настройки фотоаппарата перед спуском затвора. Внимательные читатели уже заметили, что часть машины резкая, а часть вовсе нет. Всё это произошло только лишь потому что я открыл диафрагму на максимум ее диапазона,  чтобы получить больше света либо забыл поменять её после прошлого кадра. Но факт остаётся фактом, для этого я и пишу об этом, для разборов своих ошибок и достижений, и, чтобы показать Вам как делать надо, а как лучше не стоит.</p>
 							<p>Плёнка в данном случае использовалась Kodak Portra 160, которая не подходит под такие условия от слова совсем, потому что как минимум она рассчитана на хорошее количество естественного солнечного света. Этот нюанс сделал кадр холодным и синевато-зеленым, что конечно можно поправить цветокоррекцией, но это не наш вариант. Фотографировать надо не с надеждой на дальнейшую обработку, а с надеждой на минимальные коррекции кадра.</p>
 							<h2 class="mb-3 mt-5 font-weight-bold">Look и Fomapan</h2>
 							<p>Если у фотографа спросить совет какую плёнку стоит первым делом попробовать для фотографии, он скажет: "чёрно-белую". А если уточнить какую чёрно-белую, последует ответ: "Fomapan".</p>
 							<p>
-								<img src="images/muzhchina-s-trekovym-velosipedom.jpg" alt="" class="img-fluid">
+								<img src="images/muzhchina-s-trekovym-velosipedom.jpg" alt="Пленочная фотосессия трекового велосипеда Look" class="img-fluid">
 							</p>
 							<p>Черно-белая с одной стороны может простить некоторые огрехи фотографа, такие как цветные блики, простота цветокоррекции. Однако несмотря на это имеет меньшую популярность чем цветная негативная. Благодаря меньшей популярности среди фотографов стоимость этой плёнки как правило на порядок ниже, чем стоимость цветной плёнки.</p>
 							<p>Разберем полученный кадр.</p>
@@ -109,7 +109,7 @@
 							<p>Локация подобрана удачно, погода солнечная, значит освещение в достатке. Немаловажную роль сыграл клиент, который смог органично встать в кадре со своим велосипедом и не постеснялся сфотографироваться, хоть это было не запланировано.</p>
 							<div class="about-author d-flex p-4 bg-light">
 								<div class="bio mr-5">
-									<img src="images/author.jpg" alt="Image placeholder" class="img-fluid mb-4 blog-photo" id="blog-photo">
+									<img src="images/author.jpg" alt="Фотография автора статьи" class="img-fluid mb-4 blog-photo" id="blog-photo">
 								</div>
 								<div class="desc">
 									<h3>Олег Пазний</h3>
@@ -128,18 +128,25 @@
 							<div class="ftco-footer-widget mb-4 ml-md-4">
 								<h2 class="ftco-heading-2">Последние фото</h2>
 								<ul class="list-unstyled photo">
-									<li><a href="#" class="img" style="background-image: url(images/reklama-audi-rs-etron.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/dve-mashiny-stoyat-na-zakate.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/karbonovyj-velosiped-na-doroge.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/seryj-avtomobil-edet-v-zakate.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/trekovyj-velosiped-luk.jpg);"></a>
-									</li>
+									<div class="container">
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg" alt="Фотосесия Audi RS e-tron GT"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Плёночное фото Opel Vectra"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan"></div>
+											</li>
+										</div>
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фотосессия Opel на закате"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фото Seat Toledo под мостом"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg" alt="Фотосесия трекового велосипеда Look"></div>
+											</li>
+										</div>
+										
+									</div>
 								</ul>
 							</div>
 						</div>
