--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/mystyle.css">
 </head>
 
 <body>
@@ -174,45 +175,45 @@
 				<div class="container">
 					<div class="row justify-content-center mb-2 pb-3">
 						<div class="col-md-7 heading-section heading-section-2 text-center ftco-animate">
-							<h2 class="mb-4">Подписывайтесь на меня в Instagram</h2>
+							<h2 class="mb-4">Подписывайтесь на мой Instagram</h2>
 						</div>
 					</div>
 					<div class="row no-gutters">
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/reklama-audi-rs-etron.jpg" class="insta-img image-popup"
-								style="background-image: url(images/reklama-audi-rs-etron.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/reklama-audi-rs-etron.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/reklama-audi-rs-etron.jpg" alt="Рекламные фотографии Audi">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/dve-mashiny-stoyat-na-zakate.jpg" class="insta-img image-popup"
-								style="background-image: url(images/dve-mashiny-stoyat-na-zakate.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/dve-mashiny-stoyat-na-zakate.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Фотосессия машин на закате">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/karbonovyj-velosiped-na-doroge.jpg" class="insta-img image-popup"
-								style="background-image: url(images/karbonovyj-velosiped-na-doroge.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/karbonovyj-velosiped-na-doroge.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/seryj-avtomobil-edet-v-zakate.jpg" class="insta-img image-popup"
-								style="background-image: url(images/seryj-avtomobil-edet-v-zakate.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/seryj-avtomobil-edet-v-zakate.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фото Opel Vectra на закате">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
 							</a>
 						</div>
-						<div class="col-sm-12 col-md ftco-animate">
-							<a href="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" class="insta-img image-popup"
-								style="background-image: url(images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg);">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фотосессия Seat под мостом">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -238,11 +239,11 @@
 											</li>
 										</div>
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg" ></div>
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фотосессия Opel на закате"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"></div>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фото Seat Toledo под мостом"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg"></div>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg" alt="Фотосесия трекового велосипеда Look"></div>
 											</li>
 										</div>
 										
