--- a/article_3.html
+++ b/article_3.html
@@ -86,23 +86,23 @@
 							<p>После отбора кадров в программе Adobe Lightroom я выполняю цветокоррекцию, а после в Adobe Photoshop ретуширую изображения.</p>
 							<p>
 								<div class="compare-img col-lg-6">
-									<img src="images/perednyaya-chast-mashiny-do-retushi.jpg" alt="" class="img-fluid">
-									<img src="images/perednyaya-chast-mashiny-posle-retushi.png" alt="" class="img-fluid">
+									<img src="images/perednyaya-chast-mashiny-do-retushi.jpg" alt="Автомобиль Opel до ретуши" class="img-fluid">
+									<img src="images/perednyaya-chast-mashiny-posle-retushi.png" alt="Автомобиль Opel после ретуши" class="img-fluid">
 								</div>
 							</p>
 							<p>На этом примере можно увидеть как была убрана трещина на бампере автомобиля и также скрыта ржавчина на крыле.</p>
 							<p>В данном случае я использовал инструмент "штамп", после чего завершил ретушь инструментом "пластырь". Это один из самых простых вариантов ретуширования, который не требует больших знаний фотошопа.</p>
 							<p>
 								<div class="compare-img col-lg-6">
-									<img src="images/zadnyaya-chast-mashiny-do-retushi.jpg" alt="" class="img-fluid">
-									<img src="images/zadnyaya-chast-mashiny-posle-retushi.png" alt="" class="img-fluid">
+									<img src="images/zadnyaya-chast-mashiny-do-retushi.jpg" alt="Заднее крыло автомобиля до ретуши" class="img-fluid">
+									<img src="images/zadnyaya-chast-mashiny-posle-retushi.png" alt="Заднее крыло автомобиля после ретуши" class="img-fluid">
 								</div>
 							</p>
 							<p>На фото выше ретуширование потребовало больше усилий, так как присутствуют характерные отражения, которые необходимо было сохранить. По аналогии с первым случаем был использован инструмент "штамп", для грубого перекрытия ржавчины. Также можно было использовать инструмент "перемещение с учетом содержимого", но это зависит от Ваших предпочтений. В конечном итоге "полируем" фотографию при помощи "пластыря".</p>
 							<p>
 								<div class="compare-img col-lg-6">
-									<img src="images/pered-mashiny-po-diagonali-do-retushi.jpg" alt="" class="img-fluid">
-									<img src="images/pered-mashiny-po-diagonali-posle-retushi.png" alt="" class="img-fluid">
+									<img src="images/pered-mashiny-po-diagonali-do-retushi.jpg" alt="Передняя часть автомобиля до ретуши" class="img-fluid">
+									<img src="images/pered-mashiny-po-diagonali-posle-retushi.png" alt="Передняя часть автомобиля после ретуши" class="img-fluid">
 								</div>
 							</p>
 							<p>По отработанной схеме при помощи "штампа" и "пластыря" скрываем трещину на бампере и ржавчину на крыле.</p>
@@ -120,18 +120,25 @@
 							<div class="ftco-footer-widget mb-4 ml-md-4">
 								<h2 class="ftco-heading-2">Последние фото</h2>
 								<ul class="list-unstyled photo">
-									<li><a href="#" class="img" style="background-image: url(images/reklama-audi-rs-etron.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/dve-mashiny-stoyat-na-zakate.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/karbonovyj-velosiped-na-doroge.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/seryj-avtomobil-edet-v-zakate.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg);"></a>
-									</li>
-									<li><a href="#" class="img" style="background-image: url(images/trekovyj-velosiped-luk.jpg);"></a>
-									</li>
+									<div class="container">
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg" alt="Фотосесия Audi RS e-tron GT"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Плёночное фото Opel Vectra"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan"></div>
+											</li>
+										</div>
+										<div class="row no-gutters">
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фотосессия Opel на закате"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фото Seat Toledo под мостом"></div>
+											</li>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg" alt="Фотосесия трекового велосипеда Look"></div>
+											</li>
+										</div>
+										
+									</div>
 								</ul>
 							</div>
 						</div>
