--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 						<div class="author-image text img d-flex">
 							<section class="home-slider js-fullheight owl-carousel">
 								<div class="slider-item js-fullheight">
-									<img src="images/author.jpg">
+									<img src="images/author.jpg" alt="Фотограф Олег Пазний">
 								</div>
 
 								<div class="slider-item js-fullheight">
-									<img src="images/author-2.jpg">
+									<img src="images/author-2.jpg" alt="Фотограф Олег Пазний">
 								</div>
 							</section>
 						</div>
@@ -132,7 +132,7 @@
 					<div class="row no-gutters">
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/reklama-audi-rs-etron.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/reklama-audi-rs-etron.jpg">
+								<img class="insta-img image-popup" src="images/reklama-audi-rs-etron.jpg" alt="Рекламные фотографии Audi">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -140,7 +140,7 @@
 						</div>
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/dve-mashiny-stoyat-na-zakate.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/dve-mashiny-stoyat-na-zakate.jpg">
+								<img class="insta-img image-popup" src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Фотосессия машин на закате">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -148,7 +148,7 @@
 						</div>
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/karbonovyj-velosiped-na-doroge.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/karbonovyj-velosiped-na-doroge.jpg">
+								<img class="insta-img image-popup" src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -156,7 +156,7 @@
 						</div>
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/seryj-avtomobil-edet-v-zakate.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/seryj-avtomobil-edet-v-zakate.jpg">
+								<img class="insta-img image-popup" src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фото Opel Vectra на закате">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -164,7 +164,7 @@
 						</div>
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg">
+								<img class="insta-img image-popup" src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фотосессия Seat под мостом">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -182,19 +182,19 @@
 								<ul class="list-unstyled photo">
 									<div class="container">
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg"></div>
+											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg" alt="Фотосесия Audi RS e-tron GT"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg"></div>
+											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Плёночное фото Opel Vectra"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg"></div>
+											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan"></div>
 											</li>
 										</div>
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg"></div>
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фотосессия Opel на закате"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"></div>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фото Seat Toledo под мостом"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg"></div>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg" alt="Фотосесия трекового велосипеда Look"></div>
 											</li>
 										</div>
 										
