--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
 							<div class="media block-6 services py-4 d-block">
 								<div class="d-flex justify-content-start">
 									<div class="icon d-flex align-items-center justify-content-center">
-										<img src="images/videocam.svg" style="width: 50px">
+										<img src="images/videocam.svg" style="width: 50px" alt="Кассетная видеокамера">
 									</div>
 								</div>
 								<div class="media-body p-2 mt-2">
@@ -179,19 +179,19 @@
 								<ul class="list-unstyled photo">
 									<div class="container">
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg"></div>
+											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg" alt="Фотосесия Audi RS e-tron GT"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg"></div>
+											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Плёночное фото Opel Vectra"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg"></div>
+											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan"></div>
 											</li>
 										</div>
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg"></div>
+											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фотосессия Opel на закате"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"></div>
+											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фото Seat Toledo под мостом"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg"></div>
+											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg" alt="Фотосесия трекового велосипеда Look"></div>
 											</li>
 										</div>
 										
